third_party/WebKit/JavaScriptCore/runtime/LiteralParser.cpp
@@ -36,9 +36,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace JSC {
 
+static inline bool isJSONWhiteSpace(const UChar& c)
+{
+    // The JSON RFC 4627 defines a list of allowed characters to be considered
+    // insignificant white space: http://www.ietf.org/rfc/rfc4627.txt (2. JSON Grammar).
+    return c == ' ' || c == 0x9 || c == 0xA || c == 0xD;
+}
+
 LiteralParser::TokenType LiteralParser::Lexer::lex(LiteralParserToken& token)
 {
-    while (m_ptr < m_end && isASCIISpace(*m_ptr))
+    while (m_ptr < m_end && isJSONWhiteSpace(*m_ptr))
         ++m_ptr;
 
     ASSERT(m_ptr <= m_end);
